syntax = "proto3";
option csharp_namespace = "OzonEdu.MerchApi.Grpc";
package MerchApi;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service MerchApiGrpc {
  rpc RequestMerch (MerchRequest) returns (MerchResponse);
}

message MerchRequest {
  
}

message MerchResponse {
  
}